--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,10 +1,14 @@
 name: CodeQL
 
 on:
-  pull_request:
-    branches: master
+ push:
+    branches:
+      - main
+ pull_request:
+    branches:
+      - main
  
-  schedule:
+ schedule:
     - cron: "41 1 * * 2"
 
 jobs:
