--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 -r run-requirements.txt
-pytest~=7.1.3 # needed for python 2.7+3.4
-pytest-cov>=2.8.1
-pytest-randomly==1.2.3 # needed for python 2.7+3.4
-Flask-Testing==0.8.1
-pylint
-pylint-flask-sqlalchemy
+pytest~=7.2.1 # needed for python 2.7+3.4
+pytest-cov>=4.0.0
+pytest-randomly==3.12.0 # needed for python 2.7+3.4
+pylint==2.15.10
