--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - run:
           name: Run pylint
           # This assumes pylint is installed via the install-package step above
-          command: pylint
+          command: pylint HackerRankVendingMachine
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
