--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ pytest~=7.2.1 # needed for python 2.7+3.4
 pytest-cov>=4.0.0
 pytest-randomly==3.12.0 # needed for python 2.7+3.4
 pylint==2.15.10
+pylint-flask-sqlalchemy
