--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: Run pylint
           # This assumes pylint is installed via the install-package step above
           command: pylint HackerRankVendingMachine
-      - run:
-          name: Run tests
+    #  - run:
+    #      name: Run tests
           # This assumes pytest is installed via the install-package step above
-          command: pytest HackerRankVendingMachine
+    #      command: pytest HackerRankVendingMachine
